syntax = "proto3";

package peerland.message.broadcast;

enum BroadcastType {
    BROADCAST_TYPE_GOSSIP = 0;
}
